--- a/scrape_vela_varias_competicoes_gera_tabelas.ipynb
+++ b/scrape_vela_varias_competicoes_gera_tabelas.ipynb
@@ -1,235 +1,227 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "257f0a36",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Página HTML criada em: /home/nuno/Desktop/_TEMP/vela/classificacoes_vela.html (usa estilos.css para o CSS)\n"
-     ]
+import os
+import requests
+import pandas as pd
+from bs4 import BeautifulSoup
+
+# --------------------------------------------------
+# 1️⃣ Define output folder (relative to project)
+# --------------------------------------------------
+output_folder = "output"
+os.makedirs(output_folder, exist_ok=True)
+
+# --------------------------------------------------
+# 2️⃣ Fetch HTML content from Sailwave results page
+# --------------------------------------------------
+url = "https://www.sailwave.com/results/POR-Clubes/1PAN_ILCA_Oeiras.htm"
+response = requests.get(url)
+response.raise_for_status()
+
+soup = BeautifulSoup(response.content, "html.parser")
+site_url = url
+
+# --------------------------------------------------
+# 3️⃣ Locate summary tables and corresponding titles
+# --------------------------------------------------
+tables = soup.find_all("table", class_="summarytable")
+titles = soup.find_all("h3", class_="summarytitle")
+
+competitions = {}
+
+# --------------------------------------------------
+# 4️⃣ Process each competition table
+# --------------------------------------------------
+for i, table in enumerate(tables):
+
+    competition_name = (
+        titles[i].get_text(strip=True)
+        if i < len(titles)
+        else f"Competition_{i+1}"
+    )
+
+    # Extract headers
+    headers = [th.get_text(strip=True) for th in table.find_all("th")]
+
+    # Extract rows
+    rows = []
+    for tr in table.find_all("tr"):
+        cols = [td.get_text(strip=True) for td in tr.find_all("td")]
+        if cols:
+            rows.append(cols)
+
+    df = pd.DataFrame(rows, columns=headers)
+
+    # Rename general ranking column if needed
+    if df.columns[0] == "" or df.columns[0].lower() == "rank":
+        df = df.rename(columns={df.columns[0]: "classif_geral"})
+
+    # --------------------------------------------------
+    # Preserve race columns as strings (e.g. "(6.0)")
+    # --------------------------------------------------
+    race_columns = ["R1", "R2", "R3", "R4"]
+    for col in race_columns:
+        if col in df.columns:
+            df[col] = df[col].astype(str)
+
+    # Convert Total and Nett to numeric
+    for col in ["Total", "Nett"]:
+        if col in df.columns:
+            df[col] = pd.to_numeric(df[col], errors="coerce")
+
+    # Internal ranking by division
+    df["classif_no_escalao"] = (
+        df.sort_values("Nett")
+        .groupby("Division")
+        .cumcount() + 1
+    )
+
+    # Internal ranking by club
+    df["Rank_Clube"] = (
+        df.sort_values("Nett")
+        .groupby("Yacht Club")
+        .cumcount() + 1
+    )
+
+    # Rankings by division
+    by_division = {
+        div: data.sort_values("Nett").reset_index(drop=True)
+        for div, data in df.groupby("Division")
     }
-   ],
-   "source": [
-    "import os\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "# -----------------------------\n",
-    "# 1️⃣ Criar pasta se não existir\n",
-    "# -----------------------------\n",
-    "output_folder = \"/home/nuno/Desktop/_TEMP/vela\"\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
-    "\n",
-    "# -----------------------------\n",
-    "# 2️⃣ Obter HTML da página\n",
-    "# -----------------------------\n",
-    "url = \"https://www.sailwave.com/results/POR-Clubes/1PAN_ILCA_Oeiras.htm\"\n",
-    "html = requests.get(url).content\n",
-    "soup = BeautifulSoup(html, \"html.parser\")\n",
-    "site_url = url\n",
-    "\n",
-    "# -----------------------------\n",
-    "# 3️⃣ Encontrar todas as tabelas summarytable e títulos\n",
-    "# -----------------------------\n",
-    "tables = soup.find_all(\"table\", class_=\"summarytable\")\n",
-    "titles = soup.find_all(\"h3\", class_=\"summarytitle\")\n",
-    "\n",
-    "competicoes = {}\n",
-    "\n",
-    "# -----------------------------\n",
-    "# 4️⃣ Processar cada competição\n",
-    "# -----------------------------\n",
-    "for i, table in enumerate(tables):\n",
-    "    nome_competicao = titles[i].get_text(strip=True) if i < len(titles) else f\"Competicao_{i+1}\"\n",
-    "\n",
-    "    headers = [th.get_text(strip=True) for th in table.find_all(\"th\")]\n",
-    "    rows = []\n",
-    "    for tr in table.find_all(\"tr\"):\n",
-    "        cols = [td.get_text(strip=True) for td in tr.find_all(\"td\")]\n",
-    "        if cols:\n",
-    "            rows.append(cols)\n",
-    "    df = pd.DataFrame(rows, columns=headers)\n",
-    "\n",
-    "    # Corrigir Rank geral\n",
-    "    if df.columns[0] == \"\" or df.columns[0].lower() == \"rank\":\n",
-    "        df = df.rename(columns={df.columns[0]: \"classif_geral\"})\n",
-    "\n",
-    "    # -----------------------------\n",
-    "    # 4a️⃣ Manter R1-R4 como strings para preservar descartes\n",
-    "    colunas_r = [\"R1\",\"R2\",\"R3\",\"R4\"]\n",
-    "    for c in colunas_r:\n",
-    "        if c in df.columns:\n",
-    "            df[c] = df[c].astype(str)\n",
-    "\n",
-    "    # Converter apenas Total e Nett para numérico\n",
-    "    for c in [\"Total\",\"Nett\"]:\n",
-    "        if c in df.columns:\n",
-    "            df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
-    "\n",
-    "    # Ranking interno por escalão\n",
-    "    df[\"classif_no_escalao\"] = df.sort_values(\"Nett\").groupby(\"Division\").cumcount() + 1\n",
-    "    # Ranking interno por clube\n",
-    "    df[\"Rank_Clube\"] = df.sort_values(\"Nett\").groupby(\"Yacht Club\").cumcount() + 1\n",
-    "\n",
-    "    # Classificação por division\n",
-    "    por_divisao = {div: dados.sort_values(\"Nett\").reset_index(drop=True)\n",
-    "                   for div, dados in df.groupby(\"Division\")}\n",
-    "    # Classificação por clube\n",
-    "    por_clube = {clube: dados.sort_values(\"Nett\").reset_index(drop=True)\n",
-    "                 for clube, dados in df.groupby(\"Yacht Club\")}\n",
-    "\n",
-    "    # Classificação coletiva por clubes (Top 3)\n",
-    "    N = 3\n",
-    "    class_coletiva = (\n",
-    "        df[df[\"Rank_Clube\"] <= N]\n",
-    "        .groupby(\"Yacht Club\")\n",
-    "        .agg(Pontos_Coletivos=(\"Nett\", \"sum\"),\n",
-    "             Atletas_Contam=(\"HelmName\", \"count\"))\n",
-    "        .sort_values(\"Pontos_Coletivos\")\n",
-    "        .reset_index()\n",
-    "    )\n",
-    "    class_coletiva[\"Rank_Coletivo\"] = range(1, len(class_coletiva)+1)\n",
-    "\n",
-    "    competicoes[nome_competicao] = {\n",
-    "        \"df\": df,\n",
-    "        \"por_divisao\": por_divisao,\n",
-    "        \"por_clube\": por_clube,\n",
-    "        \"coletiva_clubes\": class_coletiva\n",
-    "    }\n",
-    "\n",
-    "# -----------------------------\n",
-    "# 5️⃣ Gerar página HTML apontando para estilos.css\n",
-    "# -----------------------------\n",
-    "html_content = '<html><head><title>Classificações Vela</title>'\n",
-    "html_content += '<link rel=\"stylesheet\" type=\"text/css\" href=\"estilos_south.css\">'\n",
-    "html_content += '</head><body>'\n",
-    "\n",
-    "# Índice\n",
-    "html_content += '<h1 id=\"topo\">Índice</h1>'\n",
-    "for comp in competicoes.keys():\n",
-    "    html_content += f'<li><a href=\"#{comp}\">{comp}</a></li>'\n",
-    "html_content += '<li><a href=\"#ranking_clubes_total\">Ranking clubes total</a></li>'\n",
-    "html_content += \"</ul>\"\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Função para aplicar cores alternadas via BeautifulSoup\n",
-    "# -----------------------------\n",
-    "def html_table_with_stripes(df):\n",
-    "    html_table = df.to_html(index=False, escape=False, classes=\"summarytable\")\n",
-    "    soup_table = BeautifulSoup(html_table, \"html.parser\")\n",
-    "    # Aplica even/odd às linhas do tbody\n",
-    "    for i, tr in enumerate(soup_table.find_all(\"tr\")[1:]):  # ignora header\n",
-    "        tr['class'] = 'even' if i % 2 == 0 else 'odd'\n",
-    "    return str(soup_table)\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Inserir competições\n",
-    "# -----------------------------\n",
-    "for comp, data in competicoes.items():\n",
-    "    \n",
-    "    # Escolher cor de fundo diferente por competição\n",
-    "    if \"ILCA4\" in comp.upper():\n",
-    "        html_content += f'<div id=\"ilca4\">'\n",
-    "    elif \"ILCA6\" in comp.upper():\n",
-    "        html_content += f'<div id=\"ilca6\">'\n",
-    "    else:\n",
-    "        html_content += f'<div>'\n",
-    "    html_content += f'<hr><h2 id=\"{comp}\">{comp}</h2>'\n",
-    "\n",
-    "    # Tabela original (remover colunas extras)\n",
-    "    df_orig = data[\"df\"].drop(columns=[\"classif_no_escalao\", \"Rank_Clube\"])\n",
-    "    #html_content += \"<h3>Tabela original</h3>\"\n",
-    "    html_content += f'<a href=\"{site_url}\" target=\"_blank\"><h3>Tabela original / Oficial</h3></a>'\n",
-    "    html_content += '<p><a href=\"#topo\">Voltar ao topo</a></p>'\n",
-    "    html_content += html_table_with_stripes(df_orig)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    # Ranking por division (destacar top 3)\n",
-    "    \n",
-    " \n",
-    "    \n",
-    "    html_content += f'<h3>Ranking por Division</h3>'\n",
-    "    for div, df_div in data[\"por_divisao\"].items():\n",
-    "        df_div_clean = df_div.drop(columns=[\"Rank_Clube\"])\n",
-    "        df_div_clean['classif_no_escalao'] = df_div_clean['classif_no_escalao'].astype(object)\n",
-    "        for i, row in df_div_clean.iterrows():\n",
-    "            if row['classif_no_escalao'] == 1: \n",
-    "                df_div_clean.at[i, 'classif_no_escalao'] = f'<span class=\"place1\">{row[\"classif_no_escalao\"]}</span>'\n",
-    "            elif row['classif_no_escalao'] == 2: \n",
-    "                df_div_clean.at[i, 'classif_no_escalao'] = f'<span class=\"place2\">{row[\"classif_no_escalao\"]}</span>'\n",
-    "            elif row['classif_no_escalao'] == 3: \n",
-    "                df_div_clean.at[i, 'classif_no_escalao'] = f'<span class=\"place3\">{row[\"classif_no_escalao\"]}</span>'\n",
-    "        html_content += f'<h4>{div}</h4>'\n",
-    "        html_content += html_table_with_stripes(df_div_clean)\n",
-    "\n",
-    "    # Ranking por clube\n",
-    "    html_content += \"<h3>Ranking por Clube</h3>\"\n",
-    "    for clube, df_cl in data[\"por_clube\"].items():\n",
-    "        df_cl_clean = df_cl.drop(columns=[\"classif_no_escalao\", \"Rank_Clube\"])\n",
-    "        html_content += f'<h4>{clube}</h4>'\n",
-    "        html_content += html_table_with_stripes(df_cl_clean)\n",
-    "        \n",
-    "    html_content += '</div>'  # fecha a div da competição\n",
-    "\n",
-    "# Ranking coletivo final dos clubes\n",
-    "coletiva_total = pd.DataFrame()\n",
-    "for data in competicoes.values():\n",
-    "    df_co = data[\"coletiva_clubes\"][[\"Yacht Club\",\"Pontos_Coletivos\"]].copy()\n",
-    "    coletiva_total = pd.concat([coletiva_total, df_co])\n",
-    "coletiva_total = coletiva_total.groupby(\"Yacht Club\").sum().reset_index()\n",
-    "coletiva_total = coletiva_total.sort_values(\"Pontos_Coletivos\").reset_index(drop=True)\n",
-    "coletiva_total[\"Rank_Coletivo_Total\"] = range(1, len(coletiva_total)+1)\n",
-    "\n",
-    "html_content += '<h2 id=\"ranking_clubes_total\">Ranking clubes total</h2>'\n",
-    "html_content += '<p><a href=\"#topo\">Voltar ao topo</a></p>'\n",
-    "html_content += html_table_with_stripes(coletiva_total)\n",
-    "\n",
-    "# -----------------------------\n",
-    "# Salvar HTML\n",
-    "# -----------------------------\n",
-    "output_file = os.path.join(output_folder, \"classificacoes_vela.html\")\n",
-    "with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(html_content)\n",
-    "\n",
-    "print(f\"Página HTML criada em: {output_file} (usa estilos.css para o CSS)\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7980145a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+
+    # Rankings by club
+    by_club = {
+        club: data.sort_values("Nett").reset_index(drop=True)
+        for club, data in df.groupby("Yacht Club")
+    }
+
+    # --------------------------------------------------
+    # Club collective ranking (Top N sailors per club)
+    # --------------------------------------------------
+    TOP_N = 3
+    club_collective = (
+        df[df["Rank_Clube"] <= TOP_N]
+        .groupby("Yacht Club")
+        .agg(
+            Pontos_Coletivos=("Nett", "sum"),
+            Atletas_Contam=("HelmName", "count")
+        )
+        .sort_values("Pontos_Coletivos")
+        .reset_index()
+    )
+    club_collective["Rank_Coletivo"] = range(1, len(club_collective) + 1)
+
+    competitions[competition_name] = {
+        "df": df,
+        "by_division": by_division,
+        "by_club": by_club,
+        "club_collective": club_collective
+    }
+
+# --------------------------------------------------
+# 5️⃣ Build HTML output
+# --------------------------------------------------
+html_content = """
+<html>
+<head>
+<meta charset="utf-8">
+<title>Sailing Results</title>
+<link rel="stylesheet" type="text/css" href="estilos_south.css">
+</head>
+<body>
+"""
+
+# Index
+html_content += '<h1 id="topo">Index</h1><ul>'
+for comp in competitions.keys():
+    html_content += f'<li><a href="#{comp}">{comp}</a></li>'
+html_content += '<li><a href="#ranking_clubes_total">Overall Club Ranking</a></li>'
+html_content += '</ul>'
+
+# --------------------------------------------------
+# Helper: apply alternating row styles
+# --------------------------------------------------
+def html_table_with_stripes(df):
+    table_html = df.to_html(index=False, escape=False, classes="summarytable")
+    soup_table = BeautifulSoup(table_html, "html.parser")
+    for i, tr in enumerate(soup_table.find_all("tr")[1:]):
+        tr["class"] = "even" if i % 2 == 0 else "odd"
+    return str(soup_table)
+
+# --------------------------------------------------
+# Insert competitions
+# --------------------------------------------------
+for comp, data in competitions.items():
+
+    if "ILCA4" in comp.upper():
+        html_content += '<div id="ilca4">'
+    elif "ILCA6" in comp.upper():
+        html_content += '<div id="ilca6">'
+    else:
+        html_content += '<div>'
+
+    html_content += f'<hr><h2 id="{comp}">{comp}</h2>'
+
+    # Original table
+    df_original = data["df"].drop(columns=["classif_no_escalao", "Rank_Clube"])
+    html_content += f'<a href="{site_url}" target="_blank"><h3>Original / Official Table</h3></a>'
+    html_content += '<p><a href="#topo">Back to top</a></p>'
+    html_content += html_table_with_stripes(df_original)
+
+    # Rankings by division
+    html_content += '<h3>Ranking by Division</h3>'
+    for div, df_div in data["by_division"].items():
+        df_div_clean = df_div.drop(columns=["Rank_Clube"])
+        df_div_clean["classif_no_escalao"] = df_div_clean["classif_no_escalao"].astype(object)
+
+        for i, row in df_div_clean.iterrows():
+            if row["classif_no_escalao"] == 1:
+                df_div_clean.at[i, "classif_no_escalao"] = '<span class="place1">1</span>'
+            elif row["classif_no_escalao"] == 2:
+                df_div_clean.at[i, "classif_no_escalao"] = '<span class="place2">2</span>'
+            elif row["classif_no_escalao"] == 3:
+                df_div_clean.at[i, "classif_no_escalao"] = '<span class="place3">3</span>'
+
+        html_content += f'<h4>{div}</h4>'
+        html_content += html_table_with_stripes(df_div_clean)
+
+    # Rankings by club
+    html_content += '<h3>Ranking by Club</h3>'
+    for club, df_cl in data["by_club"].items():
+        df_cl_clean = df_cl.drop(columns=["classif_no_escalao", "Rank_Clube"])
+        html_content += f'<h4>{club}</h4>'
+        html_content += html_table_with_stripes(df_cl_clean)
+
+    html_content += '</div>'
+
+# --------------------------------------------------
+# Overall club ranking (combined competitions)
+# --------------------------------------------------
+overall = pd.concat(
+    [
+        comp["club_collective"][["Yacht Club", "Pontos_Coletivos"]]
+        for comp in competitions.values()
+    ]
+)
+
+overall = (
+    overall.groupby("Yacht Club")
+    .sum()
+    .reset_index()
+    .sort_values("Pontos_Coletivos")
+    .reset_index(drop=True)
+)
+overall["Rank_Coletivo_Total"] = range(1, len(overall) + 1)
+
+html_content += '<h2 id="ranking_clubes_total">Overall Club Ranking</h2>'
+html_content += '<p><a href="#topo">Back to top</a></p>'
+html_content += html_table_with_stripes(overall)
+
+html_content += "</body></html>"
+
+# --------------------------------------------------
+# Save HTML file
+# --------------------------------------------------
+output_file = os.path.join(output_folder, "classificacoes_vela.html")
+with open(output_file, "w", encoding="utf-8") as f:
+    f.write(html_content)
+
+print(f"HTML page created at: {output_file.replace(os.sep, '/')}")
